<resources>
    <string name="app_name" translatable="false">Linear Layout</string>
    <string name="nour_elden_alaa">Nour Elden Alaa</string>
    <string name="eg">EG</string>
    <string name="_3_hr">3 hr</string>
    <string name="egyptian">Egyptian</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_4_5" translatable="false">4.5</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="engineer">Engineer</string>
</resources>